Feature/upgrade to java 11 (#9)
* Updated to latest Chrome version and JDK 11

* Updated to latest Chrome version and JDK 11

* Updated to latest Chrome version and JDK 11

* Updated to latest Chrome version and JDK 11

* Updated to latest Chrome version and JDK 11

* [maven-release-plugin] prepare release runtime-microservice-2.0.0

* [maven-release-plugin] prepare for next development iteration

* Updated to latest Chrome version and JDK 11

---------

Co-authored-by: Anthony Lombardo <alombardo@rccl.com>