@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.pacificwebconsulting.runtime</groupId>
   <artifactId>runtime-microservice</artifactId>
-  <version>1.0.75-SNAPSHOT</version>
+  <version>2.0.1-SNAPSHOT</version>
   <name>Runtime Microservice</name>
   <description>Runtime web drivers and GRID components microservice</description>
   <url>https://github.com/AnthonyL22/runtime-microservice</url>
@@ -39,13 +39,12 @@
   </distributionManagement>
   <properties>
     <commons.lang.version>2.6</commons.lang.version>
-    <core-microservice.version>2.0.110</core-microservice.version>
-    <driver.key.chrome.linux32>2.33/chromedriver_linux32.zip</driver.key.chrome.linux32>
-    <driver.key.chrome.linux64>114.0.5735.16/chromedriver_linux64.zip</driver.key.chrome.linux64>
-    <driver.key.chrome.mac64>114.0.5735.16/chromedriver_mac64.zip</driver.key.chrome.mac64>
-    <driver.key.chrome.win64>114.0.5735.16/chromedriver_win32.zip</driver.key.chrome.win64>
-    <driver.key.edge.mac64>114.0.1791.0/edgedriver_mac64.zip</driver.key.edge.mac64>
-    <driver.key.edge.win64>114.0.1791.0/edgedriver_win64.zip</driver.key.edge.win64>
+    <core-microservice.version>3.0.1</core-microservice.version>
+    <driver.key.chrome.linux64>116.0.5845.96/linux64/chromedriver-linux64.zip</driver.key.chrome.linux64>
+    <driver.key.chrome.mac64>116.0.5845.96/mac-x64/chromedriver-mac-x64.zip</driver.key.chrome.mac64>
+    <driver.key.chrome.win64>116.0.5845.96/win64/chromedriver-win64.zip</driver.key.chrome.win64>
+    <driver.key.edge.mac64>114.0.1823.82/edgedriver_mac64.zip</driver.key.edge.mac64>
+    <driver.key.edge.win64>114.0.1823.82/edgedriver_win64.zip</driver.key.edge.win64>
     <driver.key.gecko.linux64>v0.32.2/geckodriver-v0.32.2-linux64.tar.gz</driver.key.gecko.linux64>
     <driver.key.gecko.mac64>v0.32.2/geckodriver-v0.32.2-macos.tar.gz</driver.key.gecko.mac64>
     <driver.key.gecko.win64>v0.32.2/geckodriver-v0.32.2-win64.zip</driver.key.gecko.win64>
@@ -56,8 +55,8 @@
     <exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
     <format-maven-plugin.version>2.0.1</format-maven-plugin.version>
     <jacoco.version>0.7.5.201505241946</jacoco.version>
-    <java_code.version>1.8</java_code.version>
-    <junit.version>4.13.1</junit.version>
+    <java.version>11</java.version>
+    <junit.version>4.13.2</junit.version>
     <maven-assembly-plugin.version>2.5.5</maven-assembly-plugin.version>
     <maven-clean-plugin.version>2.4.1</maven-clean-plugin.version>
     <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
@@ -69,12 +68,11 @@
     <maven-scm-plugin.version>1.8.1</maven-scm-plugin.version>
     <maven-scm-provider-gitxexe.version>1.9</maven-scm-provider-gitxexe.version>
     <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-    <maven-surefire-plugin.version>2.14</maven-surefire-plugin.version>
     <maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version>
     <mockito.version>1.10.19</mockito.version>
     <skip.plugins>false</skip.plugins>
     <sortpom-maven-plugin.version>2.6.0</sortpom-maven-plugin.version>
-    <surefire.junit.version>2.18.1</surefire.junit.version>
+    <surefire-plugin.version>2.19.1</surefire-plugin.version>
     <versions-maven-plugin.version>2.1</versions-maven-plugin.version>
   </properties>
   <dependencies>
@@ -144,25 +142,28 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${maven-compiler-plugin.version}</version>
           <configuration>
-            <source>${java_code.version}</source>
-            <target>${java_code.version}</target>
+            <source>${java.version}</source>
+            <target>${java.version}</target>
           </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>${maven-surefire-plugin.version}</version>
-          <dependencies>
-            <dependency>
-              <groupId>org.apache.maven.surefire</groupId>
-              <artifactId>surefire-junit47</artifactId>
-              <version>${surefire.junit.version}</version>
-            </dependency>
-          </dependencies>
+          <version>${surefire-plugin.version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${surefire-plugin.version}</version>
+        <configuration>
+          <forkCount>3</forkCount>
+          <reuseForks>true</reuseForks>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>com.github.ekryd.sortpom</groupId>
         <artifactId>sortpom-maven-plugin</artifactId>
@@ -229,7 +230,6 @@
                 <argument>${driver.key.edge.mac64}</argument>
                 <argument>${driver.key.edge.win64}</argument>
                 <argument>${driver.key.chrome.win64}</argument>
-                <argument>${driver.key.chrome.linux32}</argument>
                 <argument>${driver.key.chrome.linux64}</argument>
                 <argument>${driver.key.chrome.mac64}</argument>
                 <argument>${driver.key.ie.win32}</argument>
